# feeling-robot

./: LICENSE  README.md  视频和项目代码.md  遇到的问题和解决.md  项目总结.md
app/: BUILD.gn  README.md  bundle.json
app/emo-you/: BUILD.gn
app/emo-you/apps/: fengjing.c  tianqi.c
app/emo-you/emotions/: cry.c  fear.c  happy.c  neutral.c  sad.c  shy.c  surprised.c  worry.c
app/emo-you/include/: emo.h  tcp_functions.h
app/emo-you/network/: tcp_client_test.c  wifi_starter.c
app/emo-you/tests/: connect_wifi_test.c
app/emo-zuo/: BUILD.gn
app/emo-zuo/apps/: wenshidu.c  xiaohui.c
app/emo-zuo/emotions/: cry.c  fear.c  happy.c  neutral.c  sad.c  shy.c  surprised.c  worry.c
app/emo-zuo/include/: emo.h  wifi_connecter.h  wifi_starter.h
app/emo-zuo/network/: tcp_client_test.c  wifi_connecter.c
app/emo-zuo/tests/: connect_wifi_test.c
app/lvgl-you/: BUILD.gn  test.c
app/lvgl-zuo/: test.c
lvgl-9.2.2/examples/porting/: atk_md0240.h  atk_md0240_spi.h
屏幕/: README.md
屏幕/原驱动文件/: atk_md0240.c  atk_md0240.h  atk_md0240_font.h  atk_md0240_spi.c  atk_md0240_spi.h
机器人模型设计/: README.md  robot.blend
润和WS63/: README.md
