# Copyright (C) 2024 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("emo-zuo") {
  sources = [
    # 测试文件
    "tests/connect_wifi_test.c",
    
    # 网络通信模块（WiFi + TCP）
    "network/tcp_client_test.c",
    "network/wifi_connecter.c",
    "network/wifi_starter.c",
    
    # 情绪表达模块
    "emotions/cry.c",
    "emotions/fear.c",
    "emotions/happy.c",
    "emotions/neutral.c",
    "emotions/sad.c",
    "emotions/surprised.c",
    
    # 应用模块
    "apps/wenshidu.c",
  ]

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/sdkv102/kernel/osal/include/debug",

    ".",
    "include",
      "//device/soc/hisilicon/ws63v100/sdkv102/drivers/drivers/hal/spi/v151",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/drivers/hal/gpio/v150",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/chips/ws63/porting/dma",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/chips/ws63/porting/spi",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/chips/ws63/porting/gpio",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/drivers/hal/spi",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/drivers/hal/gpio",
  "//device/soc/hisilicon/ws63v100/sdkv102/drivers/chips/ws63/porting/pinctrl",


    "//device/soc/hisilicon/ws63v100/sdkv102/open_source/lwip/lwip_v2.1.3/src/include",
    "//device/soc/hisilicon/ws63v100/sdkv102/open_source/lwip/lwip_adapter/liteos_207/src/include",
    "//device/soc/hisilicon/ws63v100/sdkv102/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/include",
    "//device/soc/hisilicon/ws63v100/sdkv102/kernel/osal/include/lock",
    "//device/soc/hisilicon/ws63v100/sdkv102/kernel/osal/include/schedule",
    "//device/soc/hisilicon/ws63v100/sdkv102/middleware/utils/common_headers/native",
    "//device/soc/hisilicon/ws63v100/sdkv102/kernel/osal/include",
    "//device/soc/hisilicon/ws63v100/sdkv102/include/middleware/services/wifi",

  ]

  defines = [ "LWIP_CONFIG_FILE=\"lwip/lwipopts_default.h\"" ]
  deps = [

    "//third_party/lvgl-zuo:lvgl",
  ]

}
